Implement integration with Discord and create /setings slash command
