# app/Models/User.php
@@ -25,7 +25,9 @@ class User extends Authenticatable
     protected $fillable = [
         'name',
         'email',
+        'username',
         'password',
+        'discord_user_id'
     ];
 
     /**
@@ -48,7 +50,8 @@ class User extends Authenticatable
     #[OA\Property(property: 'id', type: 'integer')]
     #[OA\Property(property: 'name', type: 'string')]
     #[OA\Property(property: 'email', type: 'string')]
-    #[OA\Property(property: 'email_verified_at', type: 'datetime')]
+    #[OA\Property(property: 'username', type: 'string')]
+    #[OA\Property(property: 'discord_user_id', type: 'string')]
     #[OA\Property(property: 'created_at', type: 'datetime')]
     #[OA\Property(property: 'updated_at', type: 'datetime')]
     #[OA\Property(property: 'settings', ref: '#/components/schemas/UserSetting')]
@@ -65,9 +68,8 @@ class User extends Authenticatable
     protected function casts(): array
     {
         return [
-            'email_verified_at' => 'datetime',
-            'password'          => 'hashed',
-            'scopes'            => 'array'
+            'password' => 'hashed',
+            'scopes'   => 'array'
         ];
     }
 
